// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groups itemsForDay that come in on prop changes 1`] = `
<div
  className="planner-day"
>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Text>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`groups itemsForDay that come in on prop changes 2`] = `
<div
  className="planner-day"
>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Text>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={3}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "title": "Get work done!",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`groups itemsForDay that have no context into the "Notes" category 1`] = `
<div
  className="planner-day"
>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Text>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={3}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "title": "Get work done!",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`renders grouping correctly when having itemsForDay 1`] = `
<div
  className="planner-day"
>
  <Heading
    border="none"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Text>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={101}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={102}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": true,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={103}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "inform_students_of_overdue_submissions": false,
              "type": "Group",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Same id, different type",
          },
        ]
      }
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`renders the base component with required props 1`] = `
<div
  className="planner-day"
>
  <Heading
    border="bottom"
    color="inherit"
    ellipsis={false}
    level="h2"
  >
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
      transform="uppercase"
    >
      Tuesday
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      lineHeight="condensed"
      size="medium"
    >
      April 25, 2017
    </Text>
  </Heading>
  <div>
    <View
      display="block"
      margin="small 0 0 0"
      textAlign="center"
    >
      Nothing Planned Yet
    </View>
  </div>
</div>
`;
